[package]
name = "nauti"
version = "0.1.0"
authors = ["Adam Soutar"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "nauti"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.2"

[dependencies]
neon = "0.4.0"
censor = "0.1.1"
serde_json = "1.0"
rayon = "1.5.0"
neon-serde = "0.4.0"
